Fix - scrollbar market data

--- a/src/Pages/Components/Market/Market.module.css
+++ b/src/Pages/Components/Market/Market.module.css
@@ -15,6 +15,30 @@
     color: #44464a;
 }
 
+.nav{
+display: flex;
+  justify-content: space-between;
+  background-color: #fff;
+  margin-block: 3rem ;
+}   
+
+.nav>a{
+    font-size: clamp(1rem, 2vw, 1.25rem);
+    font-weight: 600;
+    color: #44464a;
+    cursor: pointer;
+}
+
+.nav>a:nth-child(1) {
+    border-bottom: 3px solid blue;
+    padding-bottom: 0.5rem;
+    color: blue;
+}
+ 
+.nav p:active{
+    color: #f1f1f1;
+}
+
 .bar {
     margin-bottom: clamp(30px, 7.5vw, 50px);
 }
